//  Copyright (c) 2021, WSO2 LLC. (http://www.wso2.org) All Rights Reserved.
//
//  WSO2 LLC. licenses this file to you under the Apache License,
//  Version 2.0 (the "License"); you may not use this file except
//  in compliance with the License.
//  You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
//  Unless required by applicable law or agreed to in writing,
//  software distributed under the License is distributed on an
//  "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
//  KIND, either express or implied.  See the License for the
//  specific language governing permissions and limitations
//  under the License.

syntax = "proto3";

package wso2.discovery.api;

import "wso2/discovery/api/endpoint_cluster.proto";
import "wso2/discovery/api/api_authentication.proto";
import "wso2/discovery/api/security_info.proto";
// import "wso2/discovery/api/mocked_api_config.proto";

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/api;api";
option java_package = "org.wso2.apk.enforcer.discovery.api";
option java_outer_classname = "ResourceProto";
option java_multiple_files = true;

// [#protodoc-title: Resource]

// Resource config model
message Resource {
	string id = 1;
	string path = 2;
	repeated Operation methods = 3;
	EndpointCluster endpoints = 4;
	repeated SecurityInfo endpointSecurity =5;
}

// Operation model which maps to a particular http methods
message Operation {
	string method = 1;
	APIAuthentication apiAuthentication = 2;
	string tier = 3;
	OperationPolicies policies = 4;
	repeated string scopes = 5;
	string matchID = 6;
	// MockedApiConfig mockedApiConfig = 6;
}

// OperationPolicies holds policies of the APIM operations
message OperationPolicies {
	repeated Policy request = 1;
	repeated Policy response = 2;
	repeated Policy fault = 3;
}

// Policy holds APIM policies
message Policy {
	string action = 1;
	map<string, string> parameters = 2;
}
